include html vignette

--- a/vignettes/vignette t-test-html.Rmd
+++ b/vignettes/vignette t-test-html.Rmd
@@ -1,19 +1,12 @@
 ---
 title: "Change of Evidence Vignette t-Test"
 author: "Moritz C. Dechamps"
-date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{Vignette Title}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+date: "19 7 2021"
+output: html_document
 ---
 
-```{r setup, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Generate Sample Data
